--- a/package.json
+++ b/package.json
@@ -1,30 +1,45 @@
 {
   "name": "backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "version": "1.0.0",
+  "description": "Tastyhouse main backend",
+  "author": "danieluhm2004 <daniel@tastyhou.se>",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "nest build",
+    "start": "doppler run --command \"nest start\"",
+    "start:dev": "doppler run --command \"nest start --watch\"",
+    "start:debug": "doppler run --command \"nest start --debug --watch\"",
+    "start:prod": "node dist/src/main",
+    "migrate": "doppler run --command \"typeorm schema:sync -d ./ormconfig.js\"",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
+    "helmet": "^7.0.0",
+    "lodash": "^4.17.21",
+    "mysql2": "^3.3.2",
+    "nestjs-swagger-dto": "^3.5.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.16"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
+    "@types/lodash": "^4.14.194",
     "@types/node": "18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
