--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "start": "doppler run --command \"nest start\"",
-    "start:dev": "doppler run --command \"nest start --watch\"",
-    "start:debug": "doppler run --command \"nest start --debug --watch\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
-    "migrate": "doppler run --command \"typeorm schema:sync -d ./ormconfig.js\"",
+    "migrate": "typeorm schema:sync -d ./ormconfig.js",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix"
   },
